start creation windows exe file